# Fixed font size and list spacing

--- a/assets/www/wmp.css
+++ b/assets/www/wmp.css
@@ -1,65 +1,66 @@
 
 
-	body {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		padding: 0;
-		margin: 0;
-	}
+body {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+	font-size: 12px;
+}
 
-	li {
-		padding-bottom: 4px;
-		margin-bottom: 4px;
-		border-bottom: 1px dashed black;
-	}
+li {
+	padding-bottom: 4px;
+	margin-bottom: 2px;
+	border-bottom: 1px dashed black;
+}
 
-	li:last-child {
-		border: none;
-	}
+li:last-child {
+	border: none;
+}
 
+.bad {
+	color: red;
+}
 
-	.not-ok {
-		color: red;
-	}
+.ok {
+	color: green;
+}
 
-	.ok {
-		color: green;
-	}
+#debug {
+	font-family: monospace;
+	position: absolute;
+	bottom: 0;
+	height: 40%;
+	width: 100%;
+	font-size: 75%;
+	color: darkgoldenrod;
+	overflow: scroll;
+}
 
-	#debug {
-		font-family: monospace;
-		position: absolute;
-		bottom: 0;
-		height: 40%;
-		width: 100%;
-		font-size: 75%;
-		color: darkgoldenrod;
-		overflow: scroll;
-	}
+#info-wrapper {
+	position: absolute;
+	top:50%;
+	width: 100%;
+	height: 60px;
+	margin-top: -30px;
+}
 
-	#info-wrapper {
-		position: absolute;
-		top:50%;
-		width: 100%;
-		height: 60px;
-		margin-top: -30px;
-	}
+#info {
+	font-size: 14px;
+	border: darkgreen 2px solid;
+	border-radius: 4px;
+	margin: 0px 10px;
+	color: #000;
+}
 
-	#info {
-		border: darkgreen 2px solid;
-		border-radius: 4px;
-		margin: 0px 10px;
-		color: #000;
-	}
+#info.awesome {
+	color: #fff;
+	font-weight: bold;
+	background-color: green;
+	text-align: center;
+}
 
-	#info.awesome {
-		color: #fff;
-		font-weight: bold;
-		background-color: green;
-		text-align: center;
-	}
-
-	.hidden {
-		display: none;
-	}
+.hidden {
+	display: none;
+}
